lib/include/shared/architecture.h

#ifndef CPU_FEATURES_DOTNET_ARCH_H
#define CPU_FEATURES_DOTNET_ARCH_H

#include "cpu_features_macros.h"

#include <stdbool.h>

CPU_FEATURES_DOTNET_START_CPP_NAMESPACE

CPU_FEATURES_DOTNET_DLL_EXPORT bool is_arch_X86(void);
CPU_FEATURES_DOTNET_DLL_EXPORT bool is_arch_i386(void);
CPU_FEATURES_DOTNET_DLL_EXPORT bool is_arch_X64(void);
CPU_FEATURES_DOTNET_DLL_EXPORT bool is_arch_arm(void);
CPU_FEATURES_DOTNET_DLL_EXPORT bool is_arch_aarch32(void);
CPU_FEATURES_DOTNET_DLL_EXPORT bool is_arch_aarch64(void);

CPU_FEATURES_DOTNET_END_CPP_NAMESPACE
#endif //CPU_FEATURES_DOTNET_ARCH_H